scss/_06-site-header.scss
/* 6.0 Site header*/
.site-header {
  background-color: var(--color-scheme);
  color: var(--header-text-color);
  text-align: center;

  > * + * {
    margin-top: 1em;
  }

  a {
    text-decoration: none;
    color: var(--header-text-color);
  }
}

.site-branding {
  &__title,
  &__tagline {
    margin: 0;
    font-weight: var(--font-weight--xxbold);
    text-transform: uppercase;
  }

  &__title {
    font-size: 2.2rem;
    line-height: 1em;
  }

  &__tagline {
    font-size: 0.8rem;
  }
}

.bidnis-phone,
.bidnis-email {
  font-weight: var(--font-weight--bold);
}

.social-links {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 0.5em;

  a {
    background-color: var(--color-black);
    color: var(--color-white);
    padding: 0.15em;
    border-radius: var(--border-radius);
    width: 1.5em;
    height: 1.5em;
    display: flex;
    align-items: center;
    justify-content: center;
  }
}

@media (min-width: 48em) {
  .site-header {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: flex-end;
    column-gap: 1em;
    order: -1;

    * {
      margin: 0;
    }
  }
  
  .site-branding {
    flex-shrink: 0;
    flex-grow: 1;
    text-align: left;
  }

  .social-links {
    max-width: 26em;
    margin: 0;
    justify-content: flex-end;
  }
}

